# BuildWatch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  buildwatch.config.json
.claude/: settings.local.json
docs/: architecture.md
scripts/: setup_watchman.sh  setup_watchman_path.sh
src/: builder.rs  config.rs  daemon.rs  detector.rs  lib.rs  main.rs  notifier.rs  output.rs  queue.rs  state.rs  watcher.rs
tests/: core_behavior.rs
