[package]
name = "buildwatch"
version = "0.1.0"
edition = "2021"
description = "Universal file watcher & build daemon — the ghost that keeps your builds fresh"
license = "MIT"
repository = "https://github.com/omnivista/buildwatch"
readme = "README.md"
keywords = ["build", "watch", "daemon", "automation", "file-watcher"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "buildwatch"
path = "src/main.rs"

[[bin]]
name = "wr"
path = "src/bin/wr.rs"

[dependencies]
# Watchman integration (Facebook-maintained)
watchman_client = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Notifications
notify-rust = "4"

# Signal handling
ctrlc = { version = "3", features = ["termination"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Terminal detection
atty = "0.2"

# Path hashing
sha2 = "0.10"
# Atomic file writes
tempfile = "3"

# Unix daemon support
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
